[package]
name = "kai"
version = "0.1.0"
edition = "2021"  # Mudei para 2021 (2024 não existe ainda)
description = "AI-powered text expansion tool - Type smart, work faster"
authors = ["Ivan <contato@siglobal.com.br>"]
license = "MIT"

[dependencies]
rdev = "0.5"           # Captura eventos de teclado globalmente
enigo = "0.2"          # Atualizada - simula digitação e controle do teclado
tokio = { version = "1", features = ["full"] }  # Runtime assíncrono
reqwest = { version = "0.11", features = ["json"] }  # Cliente HTTP (removido tokio-runtime)
serde_json = "1.0"     # Para serialização JSON nas chamadas da API
tray-item = "0.7" # bandeja com menu e icone
gtk = "0.15" #  para icone na bandeja
